--- a/src/components/Clients/Clients.module.scss
+++ b/src/components/Clients/Clients.module.scss
@@ -1,7 +1,7 @@
 .main{
    width: 50%;
    height: 100%;
-   min-height: 450px;
+   min-height: 500px;
    background-color: #E6E6E6;
    border-radius: 10px;
    box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.212);
@@ -108,5 +108,13 @@
    }
    &:focus{
       outline: auto;
+   }
+}
+
+@media(max-width:1300px){
+   .main{
+      margin-top: 20px;
+      width: 100%;
+      min-height: 550px;
    }
 }
