--- a/src/components/MainInfo/MainInfo.module.scss
+++ b/src/components/MainInfo/MainInfo.module.scss
@@ -14,9 +14,15 @@
    gap: 15px;
    max-height: 600px;
 }
-@media(max-width:1100px){
+@media(max-width:1300px){
    .main_list{
       max-height: 100%;
+      flex-direction: column;
+   }
+}
+@media(max-width:1300px){
+
+   .main_list{
       flex-direction: column;
    }
 }
