--- a/src/components/SelectSeller/SelectSeller.module.scss
+++ b/src/components/SelectSeller/SelectSeller.module.scss
@@ -1,6 +1,7 @@
 .dropdown{
    padding: 1rem;
    border-radius: 0.5rem;
+   margin-top: 2rem;
    background-color: #e7e7e7;
    outline: none;
    border: none;
